--- a/Project-SIYANDO tennis courts/SiyandoHist.css
+++ b/Project-SIYANDO tennis courts/SiyandoHist.css
@@ -1,38 +1,8 @@
-body{
-    background-color: #F9E7A2;
-    padding: 0 30px;
-}
 
-body *{
-    font-family: Cursive;
-}
 
-.page{
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-}
 
-.header{
-    text-align: center;
-    font-family: Cursive;
-    color: #454134;
-}
-
-.header-bar{
-    display: flex;
-    justify-content: space-around;
-    border: 1px solid #EAD68C;
-    background-color: #EAD68C;
-    padding: 0;
-    border-radius: 15px;
-}
-
-.content{
-    height: 700px;
-    background-color: #EAD68C;
-    margin: 5px 0;
-    border-radius: 15px;
+.header-bar .courts.btn-wrap button{
+    background-color: #E0CF8E;
 }
 
 .content .info,.content .courts-images,.content .info-rank{
@@ -47,8 +17,8 @@ body *{
 
 .courts-first-row, .courts-second-row{
     display: flex;
+    flex-direction: row;
     justify-content: center;
-
 }
 
 .siyando-hist-content img{
@@ -58,6 +28,8 @@ body *{
 
 .courts{
     display: flex;
+    flex-direction: row;
+
 }
 
 .courts-images{
@@ -140,3 +112,68 @@ ol li{
     margin: 10px 0;
     background-color: #D8BD8B;
 }
+
+
+@media (max-width: 890px) {
+    .courts{
+        flex-direction: column;
+    }
+
+    .content .info, .content .courts-images, .content .info-rank{
+        width: 100%;
+    }
+
+    .courts-first-row, .courts-second-row{
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+    }
+    
+    .siyando-hist-content img{
+        width: 300px;
+    }
+
+    .court .tooltip {
+        width: 300px;
+    }
+
+    .court{
+        margin: 0;
+    }
+    
+    .header-bar{
+        flex-direction: column;
+    }
+    /*
+    .headerHolder {
+      padding-left: 15%;
+    }
+  
+    .text {
+      margin-top: 0%;
+      margin-left: 2%;
+      width: 100%;
+      height: 100%;
+    }
+  
+    .paragraph1Wrapper {
+      margin-top: 0%;
+    }
+  
+    .headerWrapper {
+      margin-top: 0%;
+      margin-left: 15%;
+    }
+  
+    .open-button{
+      margin-top: -5%;
+    }
+  
+    .myForm {
+      padding: 0px;
+      max-width: 200px;
+    }
+    */
+  }
+
+  
