--- a/Project-SIYANDO tennis courts/buttons.css
+++ b/Project-SIYANDO tennis courts/buttons.css
@@ -27,6 +27,26 @@
     cursor: pointer;
 }
 
+.confirm .cancel-btn,.confirm .confirm-btn{
+    height: 35px;
+    width: 100px;
+    background-color: #EAD68C;
+    border: none;
+    cursor: pointer;
+    border-bottom: 2px solid #6E643C;
+}
+
+
+.confirm .cancel-btn:hover,.confirm .confirm-btn:hover{
+    background-color: #DFCC85;
+}
+
+
+.confirm .cancel-btn:focus,.confirm .confirm-btn:focus{
+    outline: none;;
+    background-color: #E0CF8E;
+}
+
 .btn-wrap button:hover{
     background-color: #DFCC85;
     color: black;
